force-app/main/default/objects/Service_Appointment__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>