force-app/main/default/objects/Service_Appointment__c/validationRules/Appointment_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Appointment_Date__c &lt; NOW()</errorConditionFormula>
    <errorMessage>Appointment date cannot be in the past.</errorMessage>
</ValidationRule>